test-suite/tests/roundtrip/invalid/semantic/domain_not_value/01/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/domain_not_value/01/input.essence:5:11:
  |
5 | such that atom in used
  |           ^^^^
Tried to use a Domain where Value was expected

